src/objects/copado__Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Maintenance_Page__c</fullName>
        <description>URL to launch the custom Apex page for Editing Deployments in Maintenance Mode which provides access to the native step Detail Pages</description>
        <formula>HYPERLINK(&quot;/apex/DeploymentMaintenance?Id=&quot;+Id, &quot;Maintenance Page&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Build_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build Task</label>
        <referenceTo>copado__Build_Task__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Completed__c</fullName>
        <formula>IF(copado__Deployment_Jobs_Count__c&gt;0,
copado__Count_Completed__c /  copado__Deployment_Jobs_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Count_Completed__c</fullName>
        <label># Completed</label>
        <summarizedField>copado__Step__c.copado__Count_Completed__c</summarizedField>
        <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Date__c</fullName>
        <inlineHelpText>When this need to be deployed</inlineHelpText>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Deployed__c</fullName>
        <formula>IF(copado__Deployment_Jobs_Count__c &gt; 0,
copado__SUM_Deployed__c / copado__Deployment_Jobs_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Completed_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated when the Deployment Completed email has been sent to prevent subsequent notifications until this marker has been reset.</description>
        <label>Deployment Completed email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Jobs_Count__c</fullName>
        <label>Deployment Jobs Count</label>
        <summarizedField>copado__Step__c.copado__Org_Count__c</summarizedField>
        <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_command_sent__c</fullName>
        <label>Deployment command sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Flag_Status__c</fullName>
        <formula>CASE( copado__Status__c, &quot;Completed Successfully&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;In progress&quot;, &quot;/img/loading.gif&quot;, 
&quot;Completed with Errors&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;)</formula>
        <label>Flag Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__From_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.CreatedById</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Deployments (From Org)</relationshipLabel>
        <relationshipName>Deployments_From_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__SUM_Deployed__c</fullName>
        <label>SUM Deployed</label>
        <summarizedField>copado__Step__c.copado__SUM_Deployed__c</summarizedField>
        <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deploy now</fullName>
                </value>
                <value>
                    <fullName>Deploy later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Send_Deployment_Complete_email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When the deployment completes an email will be sent to the owner of the deployment informing them of the status. Uncheck this checkbox to not receive such an email.</inlineHelpText>
        <label>Send Deployment Complete email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Server_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_260</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Server_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>Deployments_not_part_of_Promotions</fullName>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Promotion__c</columns>
        <columns>copado__Completed__c</columns>
        <columns>copado__Deployed__c</columns>
        <columns>copado__From_Org__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>CD:</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Promotion</value>
        </filters>
        <label>Deployments - hunting</label>
    </listViews>
    <listViews>
        <fullName>View_TeamCity</fullName>
        <columns>NAME</columns>
        <columns>copado__Promotion__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Date__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>copado__Deployed__c</columns>
        <columns>copado__Completed__c</columns>
        <columns>copado__From_Org__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>copado__Send_Deployment_Complete_email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__From_Org__c</field>
            <operation>equals</operation>
            <value>INS-SIT</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>Completed Successfully</value>
        </filters>
        <label>View_TeamCity</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>Maintenance_Page__c</columns>
        <columns>copado__Promotion__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Date__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>copado__Deployed__c</columns>
        <columns>copado__Completed__c</columns>
        <columns>copado__From_Org__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>copado__Send_Deployment_Complete_email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_Deployment_Execution_For_Promote</fullName>
        <active>false</active>
        <description>Test Rule to see if we can prevent a Deployment from Executing</description>
        <errorConditionFormula>AND(
 NOT(ISNULL(copado__Promotion__c))
,ISPICKVAL( copado__Status__c ,&quot;In progress&quot;)
)</errorConditionFormula>
        <errorMessage>Promotion Deployments not allowed to be scheduled!</errorMessage>
    </validationRules>
</CustomObject>